--- a/templates/default.html
+++ b/templates/default.html
@@ -4,38 +4,271 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>Document</title>
+  <style>
+    html {
+        font-family: 'Lato', sans-serif;
+        font-size: 10px;
+    }
+    html, body {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+      font-size: 1.6rem;
+    }
+    .content-container {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 20px;
+    }
+
+    .issuer-logo {
+        width: 80px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .header {
+        position: relative;
+        text-align: right;
+        border-bottom: 1px solid black;
+        padding: 8px;
+        padding-bottom: 16px;
+    }
+    .document-type {
+        margin-bottom: 16px;
+        font-size: 2em;
+        font-weight: 700;
+    }
+
+    .issuer-name {
+        font-weight: 700;
+    }
+    .issuer-contact {
+      font-size: 1.4rem;
+    }
+
+    .invoice-info-block {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        padding-top: 32px;
+        padding-left: 8px;
+        padding-right: 8px;
+        padding-bottom: 32px;
+        border-bottom: 1px solid black;
+    }
+    .invoice-summary-block__heading {
+        width: 50%;
+        text-align: right;
+        font-weight: 700;
+    }
+
+    .invoice-summary-block {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .invoice-summary-block__value {
+        width: 50%;
+        text-align: right;
+    }
+    span.invoicee-name {
+        font-weight: 700;
+    }
+
+    .items-block {
+        margin-top: 32px;
+        margin-bottom: 32px;
+    }
+
+    .item-listing__header,
+    .item-listing__item {
+        display: flex;
+    }
+
+    .item-listing__header {
+        padding-top: 8px;
+        padding-bottom: 8px;
+        border-bottom: 1px solid black;
+    }
+    .item-listing__item {
+        padding: 16px 0px;
+    }
+    .item-listing__header__item,
+    .item-listing__item__item {
+        width: 70%;
+    }
+
+    .item-listing__header__unit-price,
+    .item-listing__item__unit-price-block {
+        width: 15%;
+        text-align: right;
+    }
+
+    .item-listing__header__quantity,
+    .item-listing__item__quantity {
+        width: 10%;
+        text-align: right;
+    }
+
+    .item-listing__header__line-total,
+    .item-listing__item__line-total {
+        width: 15%;
+        text-align: right;
+    }
+
+    span.item-listing__item__title {
+        font-weight: 700;
+    }
+
+    span.item-listing__item__description {
+        color: #666;
+        font-size: 1.4rem;
+    }
+
+    .items-summary-block {
+        border-top: 2px solid black;
+    }
+
+    .items-subtotal-block, .items-tax-block, .items-grand-total-block {
+        display: flex;
+        justify-content: flex-end;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        border-bottom: 1px solid black;
+    }
+
+    .items-subtotal__value, .items-tax__value, .items-grand-total__value {
+        width: 15%;
+        text-align: right;
+    }
+
+
+  </style>
 </head>
 <body>
-  <div>Invoice</div>
-  <div>
-    <p>
-      Invoice #: {{id}}<br/>
-      Date: {{date}}
-    </p>
-  </div>
-  <img src="{{issuer.logo}}" alt="Logo">
-  <div>
-    {{#issuer}}
-      {{name}}
-      {{#each address}}
-        {{this}}
-      {{/each}}
-      {{#contact}}
-        {{tel}}
-        {{fax}}
-        {{email}}
-        {{website}}
-      {{/contact}}
-    {{/issuer}}
-  </div>
-  <div>
-    {{#invoicee}}
-      {{name}}
-      {{#each address}}
-        {{this}}
-      {{/each}}
-    {{/invoicee}}
+  <div class="content-container">
+    <div class="header">
+      <img class="issuer-logo" src="{{issuer.logo}}" alt="Logo">
+      <div class="document-type">Invoice</div>
+      <div class="issuer-info-block">
+        {{#issuer}}
+          <span class="issuer-name">{{name}}</span><br/>
+          <p class="issuer-address">
+            {{#each address}}
+              {{this}}<br/>
+            {{/each}}
+          </p>
+          <p class="issuer-contact">
+            {{#contact}}
+              {{#if tel}}
+                <span class="issuer-tel">{{tel}}</span><br/>
+              {{/if}}
+              {{#if fax}}
+                <span class="issuer-fax">{{fax}}</span><br/>
+              {{/if}}
+              {{#if email}}
+                <span class="issuer-email">{{email}}</span><br/>
+              {{/if}}
+              {{#if website}}
+                <span class="issuer-website">{{website}}</span><br/>
+              {{/if}}
+            {{/contact}}
+          </p>
+        {{/issuer}}
+      </div>
+    </div>
+    <div class="invoice-info-block">
+      <div class="invoicee-info-block">
+        Bill to:<br/>
+        {{#invoicee}}
+          <span class="invoicee-name">{{name}}</span><br/>
+          <p class="invoicee-address">
+            {{#each address}}
+              {{this}}<br/>
+            {{/each}}
+          </p>
+          <span class="invoicee-contact">
+            {{#contact}}
+              {{#if name}}
+                <span class="invoicee-contact__name" style="font-weight:700">{{name}}</span><br/>
+              {{/if}}
+              {{#if tel}}
+                <span class="invoicee-contact__tel">{{tel}}</span><br/>
+              {{/if}}
+              {{#if email}}
+                <span class="invoicee-contact__email">{{email}}</span><br/>
+              {{/if}}
+            {{/contact}}
+          </span>
+        {{/invoicee}}
+      </div>
+      <div class="invoice-summary-block">
+        <div class="invoice-summary-block__heading">Invoice number</div>
+        <div class="invoice-summary-block__value">{{id}}</div>
+        <div class="invoice-summary-block__heading">Invoice date</div>
+        <div class="invoice-summary-block__value">{{date}}</div>
+        <div class="invoice-summary-block__heading">Due date</div>
+        <div class="invoice-summary-block__value">{{due}}</div>
+        <div class="invoice-summary-block__heading">Amount due</div>
+        <div class="invoice-summary-block__value">{{currency currency (format (grandtotal items))}}</div>
+      </div>
+    </div>
+    <div class="items-block">
+      <div class="item-listing">
+        <div class="item-listing__header">
+          <div class="item-listing__header__item">Item</div>
+          <div class="item-listing__header__unit-price">Unit Price (Tax)</div>
+          <div class="item-listing__header__quantity">Quantity</div>
+          <div class="item-listing__header__line-total">Line Total</div>
+        </div>
+        {{#each items}}
+          <div class="item-listing__item">
+            <div class="item-listing__item__item">
+              <span class="item-listing__item__title">{{title}}</span><br/>
+              <span class="item-listing__item__description">{{description}}</span>
+            </div>
+            <div class="item-listing__item__unit-price-block">
+              <span class="item-listing__item__unit-price">{{currency ../currency (format (sum amount tax))}}</span><br/>
+              <span class="item-listing__item__tax">({{format tax}})</span>
+            </div>
+            <div class="item-listing__item__quantity">{{quantity}}</div>
+            <div class="item-listing__item__line-total">{{currency ../currency (format (product quantity (sum amount tax)))}}</div>
+          </div>
+        {{/each}}
+      </div>
+      <div class="items-summary-block">
+        <div class="items-subtotal-block">
+          <div class="items-subtotal__heading">
+            Subtotal
+          </div>
+          <div class="items-subtotal__value">
+            {{currency currency (format (subtotal items))}}
+          </div>
+        </div>
+        <div class="items-tax-block">
+          <div class="items-tax__heading">
+            Tax
+          </div>
+          <div class="items-tax__value">
+            {{currency currency (format (taxtotal items))}}
+          </div>
+        </div>
+        <div class="items-grand-total-block">
+          <div class="items-tax__heading">
+            Grand Total
+          </div>
+          <div class="items-grand-total__value">
+            {{currency currency (format (grandtotal items))}}
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
