Changed Invoice number to Invoice ID

--- a/templates/default.html
+++ b/templates/default.html
@@ -221,7 +221,7 @@
         {{/invoicee}}
       </div>
       <div class="invoice-summary-block">
-        <div class="invoice-summary-block__heading"><b>Invoice number</b></div>
+        <div class="invoice-summary-block__heading"><b>Invoice ID</b></div>
         <div class="invoice-summary-block__value">{{id}}</div>
         <div class="invoice-summary-block__heading">Invoice date</div>
         <div class="invoice-summary-block__value">{{date}}</div>
